--- a/sites/all/themes/slac/scss/components/_timeline.scss
+++ b/sites/all/themes/slac/scss/components/_timeline.scss
@@ -7,17 +7,23 @@ ul.time-line {
   li.item.timeline {
     background: rgba(77, 79, 83, 0.75);
     color: #fff;
-    margin: 0 5%;
-    width: 40%;
-    float: left;
+    margin: 5%;
     padding: 30px;
     border-radius: 8px;
-    min-height: 180px;
+
+    @media(min-width: 768px) {
+      min-height: 180px;
+      width: 40%;
+      float: left;
+      margin: 0 5%;
+    }
   }
 }
 
 li.item.timeline:nth-of-type(even) {
-  margin-top: 40px !important;
+  @media(min-width: 768px) {
+    margin-top: 40px !important;
+  }
 }
 
 .time-line-container {
